# sunrise-amc-voice-assistant

./: DECISIONS.md  Demo Assignment.docx  README.md  REPORT.md  pyproject.toml  requirements.txt
data/chroma/: chroma.sqlite3
output/responses/: response_20260417_173225.json  response_20260417_173656.json  response_20260417_174120.json  response_20260417_190445.json
output/transcripts/: transcript_20260417_173642.json
src/sunrise_amc_faq/: __init__.py  cli.py  config.py  eval.py  ingest.py  ollama_client.py  pipeline.py  schemas.py  transcribe.py  vector_store.py
src/sunrise_amc_faq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
